# mindor-unibet-scraper

./: .gitignore  Cargo.toml  README.md  data.json  notes.md
src/: bet365.rs  main.rs  unibet.rs
