[package]
name = "mindor-unibet-scraper"
version = "1.2.1"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
itertools = "0.12.1"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
